# ini

./: .gitmodules  CMakeLists.txt  README.md
include/ini/: ini.h
src/ini/: ini.cpp
test/: config.ini  test.cpp
